welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: '=>' expected but 'return' found.
    case (_,_,_) return die1+die2
                 ^