welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  (die1,die2,noDoubles)match{
    case (die1,die2,noDoubles) if die1==die2 && noDoubles && die1==6 => return die1+1
    case (_,_,_) return die1+die2
  }
}